Use Arena.ofConfined() for MSL shader compilation
Changed compileMslToLibrary() to use Arena.ofConfined() instead of
GLOBAL_STRING_ARENA (Arena.global()). This matches metallum's implementation
and may fix memory allocation issues on iOS with large MSL shaders.

Also updated allocateUtf8String() to use Arena.ofConfined() internally.

Co-authored-by: openhands <openhands@all-hands.dev>